fixed the mobile responsive being too big

--- a/wp-content/themes/mtb_mag_v2/sass/_reviews.scss
+++ b/wp-content/themes/mtb_mag_v2/sass/_reviews.scss
@@ -5,7 +5,7 @@
 		width: 300px;	
 		color: #999;	
 		margin: 40px auto 30px;
-		width: 750px;
+		max-width: 750px;
 
 
 	.icon{
